PositiveRateCard の en.json の整備

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -186,7 +186,6 @@
   "比較的軽い風邪の症状": "Relatively mild cold-like symptoms",
   "発熱や咳などの{minorSymptom}がある": "{minorSymptom} such as a fever or cough",
   "日別値": "as a day",
-  "陽性率": "Positive rate",
   "1ページ当たり": "Items per page",
   "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{pageStart} - {pageStop} of {itemsLength} indexes",
   "現在判明している人数であり、後日修正される場合がある": "This number of people has been confirmed; might be modified later",
@@ -195,16 +194,30 @@
   "接触歴等不明者数": "Number of test positives in the unknown route of infection ",
   "重症患者数": "Number of patients with serious symptoms",
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
-  "速報値として公表するものであり、後日確定データとして修正される場合がある": "Preliminary value. May be modified later",
   "（注）": "(Note)",
   "医療機関等が行った検査も含む": "Including examinations at medical institutions",
   "速報値として公開するものであり、後日確定データとして修正される場合がある": "Preliminary value. May be modified later",
   "接触歴等不明者数（７日間移動平均）": "Number of test positives with an unknown route of infection (7-day moving average)",
-  "PCR検査陰性者数": "Negative PCR Test Count",
-  "抗原検査陽性者数": "Positive Antigen Test Count",
-  "PCR検査陽性者数": "Positive PCR Test Count",
-  "抗原検査陰性者数": "Negative Antigen Test Count",
-  "検査の陽性率": "Positive Test Percentage",
+  "PositiveRateCard": {
+    "a": [
+      "Positive Test Percentage",
+      "Number of PCR tests (7-MA)",
+      "Positive PCR Test Count",
+      "Positive Antigen Test Count",
+      "Negative PCR Test Count",
+      "Negative Antigen Test Count",
+      "Number of tests (a 7-day moving average)",
+      "Positive rate"
+    ],
+    "b": [
+      "Rate of Test Positives : Moving average of test positive patients /Moving average of Tested people (as test positive + negative cases)",
+      "Preliminary value. May be modified later"
+    ],
+    "c": [
+      "The number of PCR tests available per day in Iwate Pref is 864.",
+      "As an estimate of the number of tests per day at the peak of infection, assuming a positivity rate of 10.4%, there would be 444 tests if the effective reproduction rate is 1.7, and 829 tests if the effective reproduction rate is 2.0."
+    ]
+  },
   "確保病床": "Number of beds for serious patients",
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "Within hospitalized patients, \"serious symptoms\" are considered to be those patients who need ventilators or ECMO.",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
@@ -212,7 +225,6 @@
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
   "一般相談 受付件数": "Number of calls to the COVID-19 Call Center",
-  "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均": "Rate of Test Positives : Moving average of test positive patients /Moving average of Tested people (as test positive + negative cases)",
   "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
   "ふりがな": "Furigana",
   "24時間 全日（土日・祝日を含む）": "24/7 service",
@@ -230,7 +242,6 @@
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
   "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
-  "検査件数（７日間移動平均）": "Number of tests (a 7-day moving average)",
   "抗原検査件数": "Number of antigen tests",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "検査実施件数": "Number of tests",
@@ -330,7 +341,6 @@
   "感染症病床に余裕がある": "Infectious disease beds are almost available in all medical institutions.",
   "岩手の最新感染動向": "Updates on COVID-19 in Iwate",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
-  "PCR検査の7日間移動平均": "Number of PCR tests (7-day moving average)",
   "ConfirmedCasesNumberCard": {
     "title": "Number of new test positives (7-MA)",
     "a": [
@@ -341,8 +351,6 @@
       "In the case of Iwate Prefecture, If the number of positive cases continues to be 4.4 persons/day (31 persons/week) (effective reproduction number R1.7) for 3 days, request for cooperation from society (request to refrain from going out, request to refrain from business, request to close schools, etc.)."
     ]
   },
-  "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。": "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。",
-  "岩手県の1日あたりの検査可能件数は864件": "岩手県の1日あたりの検査可能件数は864件",
   "岩手のCOVID-19が気になる有志": "Volunteers who are interested in COVID-19 in Iwate",
   "人です。": "人です。",
   "{date}": "{date}",
