--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -186,7 +186,6 @@
   "比較的軽い風邪の症状": "比較的軽い風邪の症状",
   "発熱や咳などの{minorSymptom}がある": "発熱や咳などの{minorSymptom}がある",
   "日別値": "日別値",
-  "陽性率": "陽性率",
   "1ページ当たり": "1ページ当たり",
   "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{itemsLength} 項目中 {pageStart} - {pageStop} ",
   "現在判明している人数であり、後日修正される場合がある": "現在判明している人数であり、後日修正される場合がある",
@@ -195,16 +194,30 @@
   "接触歴等不明者数": "接触歴等不明者数",
   "重症患者数": "重症患者数",
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
-  "速報値として公表するものであり、後日確定データとして修正される場合がある": "速報値として公表するものであり、後日確定データとして修正される場合がある",
   "（注）": "（注）",
   "医療機関等が行った検査も含む": "医療機関等が行った検査も含む",
   "速報値として公開するものであり、後日確定データとして修正される場合がある": "速報値として公開するものであり、後日確定データとして修正される場合がある",
   "接触歴等不明者数（７日間移動平均）": "接触歴等不明者数（７日間移動平均）",
-  "PCR検査陰性者数": "PCR検査陰性者数",
-  "抗原検査陽性者数": "抗原検査陽性者数",
-  "PCR検査陽性者数": "PCR検査陽性者数",
-  "抗原検査陰性者数": "抗原検査陰性者数",
-  "検査の陽性率": "検査の陽性率",
+  "PositiveRateCard": {
+    "a": [
+      "検査の陽性率",
+      "PCR検査の7日間移動平均",
+      "PCR検査陽性者数",
+      "抗原検査陽性者数",
+      "PCR検査陰性者数",
+      "抗原検査陰性者数",
+      "検査件数（７日間移動平均）",
+      "陽性率"
+    ],
+    "b": [
+      "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均",
+      "速報値として公表するものであり、後日確定データとして修正される場合がある"
+    ],
+    "c": [
+      "岩手県の1日あたりの検査可能件数は864件",
+      "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。"
+    ]
+  },
   "確保病床": "確保病床",
   "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
@@ -212,7 +225,6 @@
   "新型コロナウイルス感染症相談窓口": "新型コロナウイルス感染症相談窓口",
   "9時～21時（土日祝含む）": "9時～21時（土日祝含む）",
   "一般相談 受付件数": "一般相談 受付件数",
-  "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均": "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均",
   "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
   "ふりがな": "ふりがな",
   "24時間 全日（土日・祝日を含む）": "24時間 全日（土日・祝日を含む）",
@@ -230,7 +242,6 @@
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
   "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
-  "検査件数（７日間移動平均）": "検査件数（７日間移動平均）",
   "抗原検査件数": "抗原検査件数",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "検査実施件数": "検査実施件数",
@@ -330,7 +341,6 @@
   "感染症病床に余裕がある": "感染症病床に余裕がある",
   "岩手の最新感染動向": "岩手の最新感染動向",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
-  "PCR検査の7日間移動平均": "PCR検査の7日間移動平均",
   "ConfirmedCasesNumberCard": {
     "title": "新規陽性者数の7日間移動平均",
     "a": [
@@ -341,8 +351,6 @@
       "岩手県の場合、陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間続いたら、社会への協力要請（外出自粛要請、営業自粛要請、学校の休校等）をおこなう。"
     ]
   },
-  "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。": "感染ピーク時の1日あたりの検査件数は、陽性率 10.4% と想定すると、実効再生産数 R1.7 の場合は 444 件、実効再生産数 R2.0 の場合は 829件 として検査態勢を整備している。",
-  "岩手県の1日あたりの検査可能件数は864件": "岩手県の1日あたりの検査可能件数は864件",
   "岩手のCOVID-19が気になる有志": "岩手のCOVID-19が気になる有志",
   "人です。": "人です。",
   "{date}": "{date}",
