en.json の表現を東京版に寄せる
- test positives -> positive cases
- pass away -> death
- serious -> severe
- lodging facilities -> designated hotels

岩手独自

- with an unknow route of infection -> unlinked
- with a known route of infection -> linked
- 7-day moving average -> 7-MA

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -3,13 +3,13 @@
   "相談の手順を見る": "See this flowchart",
   "Common": {
     "当サイトについて": "About this site",
-    "陽性者数": "Test positives",
+    "陽性者数": "Positive cases",
     "累計": "Cumulative",
     "人": " persons",
     "%": "%",
     "入院": "Hospitalized",
-    "重症": "Serious symptoms",
-    "宿泊療養": "Receiving treatment at lodging facilities",
+    "重症": "Severe cases",
+    "宿泊療養": "Recovering at designated hotels",
     "７日間移動平均": "7 Day Moving Average",
     "7MA": "7-MA : Since daily results fluctuate due to outbreaks of mass infections and variations in values depending on the day of the week, the results are calculated based on the Moving Average of the past 7 days in order to equalize such variations and see the overall trend (for example, Aug 7 is the average of the values from Aug 1 to Aug 7).",
     "検査結果の判明日を基準とする": "Based on the date when the test result is confirmed",
@@ -31,11 +31,11 @@
   },
   "Details": {
     "a": [
-      "Status of test positives",
+      "Status of Positive cases",
       "Recuperating at home",
       "Hospitalization / Medical treatment, etc.",
       "Discharged,etc.",
-      "Passed away"
+      "Deaths"
     ]
   },
   "PCR検査実施件数": "Number of PCR tests",
@@ -179,7 +179,7 @@
   "日付": "Date",
   "{title}のグラフ": "Chart of {title}",
   "強い症状": "Severe symptoms",
-  "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。": "If you are pregnant or at higher risk for serious illness (elderly, receiving dialysis, taking immunosuppressive or anti-cancer medication, or have an underlying medical condition such as diabetes, heart disease, or respiratory disease such as COPD), call immediately. For others, call after 4 days of continued symptoms.",
+  "妊娠中の方、重症化しやすい方（高齢者、糖尿病、心不全、呼吸器疾患（COPD等）等の基礎疾患がある方や透析を受けている方、免疫抑制剤や抗がん剤等を用いている方）はすぐに、それ以外の方は症状が４日以上続いた場合は必ず、相談してください。": "If you are pregnant or at higher risk for severe illness (elderly, receiving dialysis, taking immunosuppressive or anti-cancer medication, or have an underlying medical condition such as diabetes, heart disease, or respiratory disease such as COPD), call immediately. For others, call after 4 days of continued symptoms.",
   "症状には個人差がありますので、強い症状と思う場合にはすぐに相談してください。解熱剤などを飲み続けなければならない方も同様です。": "If you think your symptoms are severe, or you are taking and need to remain on an antipyretic, call immediately.",
   "息苦しさ（呼吸困難）、強いだるさ（倦怠感）、高熱等の{majorSymptom}がある": "{majorSymptom} such as shortness of breath, severe sense of fatigue, or high fever　",
   "不安に思う方": "You are feeling anxious",
@@ -190,14 +190,14 @@
   "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{pageStart} - {pageStop} of {itemsLength} indexes",
   "現在判明している人数であり、後日修正される場合がある": "This number of people has been confirmed; might be modified later",
   "{date} の数値": "Statistics for {date}",
-  "接触歴等判明者数": "Number of positive tests in definite route of infection",
-  "接触歴等不明者数": "Number of test positives in the unknown route of infection ",
-  "重症患者数": "Number of patients with serious symptoms",
+  "接触歴等判明者数": "Linked",
+  "接触歴等不明者数": "Unlinked",
+  "重症患者数": "Number of severe patients",
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
   "（注）": "(Note)",
   "医療機関等が行った検査も含む": "Including examinations at medical institutions",
   "速報値として公開するものであり、後日確定データとして修正される場合がある": "Preliminary value. May be modified later",
-  "接触歴等不明者数（７日間移動平均）": "Number of test positives with an unknown route of infection (7-day moving average)",
+  "接触歴等不明者数（７日間移動平均）": "Unlinked 7-MA",
   "PositiveRateCard": {
     "a": [
       "Positive Test Percentage",
@@ -218,8 +218,8 @@
       "As an estimate of the number of tests per day at the peak of infection, assuming a positivity rate of 10.4%, there would be 444 tests if the effective reproduction rate is 1.7, and 829 tests if the effective reproduction rate is 2.0."
     ]
   },
-  "確保病床": "Number of beds for serious patients",
-  "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "Within hospitalized patients, \"serious symptoms\" are considered to be those patients who need ventilators or ECMO.",
+  "確保病床": "Number of beds for patients",
+  "入院患者数のうち、人工呼吸器管理（ECMOを含む）が必要な患者数を計上": "Within hospitalized patients, \"Severe cases\" are considered to be those patients who need ventilators or ECMO.",
   "業種ごとの感染拡大予防ガイドライン": "業種ごとの感染拡大予防ガイドライン",
   "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "If you are worried that you may be infected, or would like to learn about preventative measures, call the Tokyo COVID-19 Call Center.",
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
@@ -230,7 +230,7 @@
   "24時間 全日（土日・祝日を含む）": "24/7 service",
   "主に「症状がある方からの受診等に関する相談」を計上": "主に「症状がある方からの受診等に関する相談」を計上",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
-  "陽性患者数（市町村別）": "Test positives (by area)",
+  "陽性患者数（市町村別）": "Positive cases by area",
   "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。",
   "市町村": "Municipality",
   "次の症状がある方": "次の症状がある方",
@@ -244,15 +244,15 @@
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
   "抗原検査件数": "Number of antigen tests",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
-  "検査実施件数": "Number of tests",
+  "検査実施件数": "Number of Tests",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
   "事業者の皆様へのお知らせ": "事業者の皆様へのお知らせ",
   "コールセンター・各保健所等への受付件数の合計": "コールセンター・各保健所等への受付件数の合計",
   "発症日不明者（検査結果が陽性であっても症状がない、発症日を覚えていないなど）はグラフから除いている": "Except people with unknown date of outbreak (test positives without symptoms, who doesn't remember the outbreak date, etc) from the graph",
-  "発症日別による陽性者数の推移": "Transition of test positives by outbreak date",
+  "発症日別による陽性者数の推移": "Transition of Positive cases by outbreak date",
   "各保健所から報告があった患者の発生情報を、発症日別に整理したものである": "The outbreak information of patients reported by each health center organized by outbreak date",
   "発症日不明者 {num} 人を除く": "Except {num} people with unknown date of outbreak",
-  "報告日別による陽性者数の推移": "Transition of test positives by reported date",
+  "報告日別による陽性者数の推移": "Transition of Positive cases by reported date",
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "The occurrence of infected people reported from health centers are organized by the confirmed date (the date confirmed positive by their doctors)",
   "陽性者の属性": "Details of test positives",
   "盛岡市": "Morioka",
@@ -323,10 +323,10 @@
   "いちのへまち": "いちのへまち",
   "フェーズ": "Phase ",
   "（参考）": "（Ref.）",
-  "宿泊療養部屋数": "Receiving treatment rooms at lodging facilities",
+  "宿泊療養部屋数": "Recovering rooms at designated hotels",
   "病床等計": "Number of beds for patients",
   "半数の感染症病床に患者を収容": "Half of the infectious disease beds are occupied by patients.",
-  "軽中症": "Mild-moderate ",
+  "軽中症": "Mild to moderate symptoms ",
   "まん延期": "Spread stage",
   "岩手県の病床確保計画": "Iwate Prefecture's plan to secure hospital beds",
   "発生初期": "Early stage of outbreak",
@@ -342,7 +342,7 @@
   "岩手の最新感染動向": "Updates on COVID-19 in Iwate",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
   "ConfirmedCasesNumberCard": {
-    "title": "Number of new test positives (7-MA)",
+    "title": "Number of Positive cases 7-MA",
     "a": [
       "Including examinations at medical institutions"
     ],
@@ -386,11 +386,11 @@
     ]
   },
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
-  "接触歴等不明者数(7日間移動平均)": "Number of test positives with an unknown route of infection (7-day moving average)",
+  "接触歴等不明者数(7日間移動平均)": "Number of Unlinked 7-MA (Positive cases with unknown routes of infection) ",
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
   "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
   "陽性者数/人口": "Number of test positives/Population",
-  "入院と宿泊療養の推移": "Changes in hospitalized and in lodging facilities patients",
+  "入院と宿泊療養の推移": "Changes in hospitalized and in designated hotels patients",
   "県内": "Inside Iwate",
   "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
   "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
