--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -163,6 +163,15 @@
   "合計": "合計",
   "{date}の合計": "%{date}の合計",
   "最新のお知らせ": "最新のお知らせ",
+  "SelfDisclosures": {
+    "a": [
+      "自主公表"
+    ],
+    "notes": [
+      "うわさや風評被害への不安・個人情報の保護・組織としての社会的責任・リスクマネジメントとBCP・あとから発覚することによる評判の低下・事実の迅速な情報開示による顧客や地域への安心の提供、その狭間で、勇気を持って自主的に各ホームページで公表された情報 👏",
+      "判明分のみ"
+    ]
+  },
   "新型コロナウイルス感染症にかかる相談窓口について": "新型コロナウイルス感染症にかかる相談窓口について",
   "別タブで開く": "別タブで開く",
   "2次元コード": "2次元コード",
