--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -13,7 +13,8 @@
     "７日間移動平均": "７日間移動平均",
     "7MA": "7日間移動平均：集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値をもとに算出（例えば、8月7日は、8月1日から8月7日までの値を平均したもの）",
     "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
-    "注": "（注）"
+    "注": "注釈",
+    "データを表示": "データを表示"
   },
   "ExtLink": {
     "厚生労働省x696": {
@@ -39,7 +40,6 @@
     ]
   },
   "PCR検査実施件数": "PCR検査実施件数",
-  "テーブルを表示": "テーブルを表示",
   "{date}の累計": "{date}の累計",
   "件": {
     "tested": "件",
