多言語選択メニューを有効化 & locales から ja-basic を外す

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -3,6 +3,7 @@
   "相談の手順を見る": "相談の手順を見る",
   "Common": {
     "当サイトについて": "当サイトについて",
+    "多言語対応選択メニュー": "多言語対応選択メニュー",
     "陽性者数": "陽性者数",
     "累計": "累計",
     "人": "人",
