--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -3,6 +3,7 @@
   "相談の手順を見る": "See this flowchart",
   "Common": {
     "当サイトについて": "About this site",
+    "多言語対応選択メニュー": "Select language",
     "陽性者数": "Positive cases",
     "累計": "Cumulative",
     "人": " persons",
