遅延ロード・遅延レンダリングを導入する
from tokyo
https://github.com/tokyo-metropolitan-gov/covid19/pull/5741

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -4,6 +4,8 @@
   "Common": {
     "当サイトについて": "About this site",
     "多言語対応選択メニュー": "Select language",
+    "モニタリング項目": "Summary of Monitorings",
+    "お知らせ・参考資料": "Other Indexes",
     "陽性者数": "Positive cases",
     "累計": "Cumulative",
     "人": " persons",
