--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -4,6 +4,8 @@
   "Common": {
     "当サイトについて": "当サイトについて",
     "多言語対応選択メニュー": "多言語対応選択メニュー",
+    "モニタリング項目": "モニタリング項目",
+    "お知らせ・参考資料": "お知らせ・参考資料",
     "陽性者数": "陽性者数",
     "累計": "累計",
     "人": "人",
