--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -350,7 +350,7 @@
   "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している": "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している",
   "すべての医療機関の感染症病床が利用できる": "Infectious disease beds are available in all medical institutions.",
   "感染症病床に余裕がある": "Infectious disease beds are almost available in all medical institutions.",
-  "岩手の最新感染動向": "Updates on COVID-19 in Iwate",
+  "岩手の最新感染動向": "COVID-19 in Iwate",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
   "ConfirmedCasesNumberCard": {
     "title": "Number of Positive cases 7-MA",
