--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -165,7 +165,9 @@
   "前日比": "前日比",
   "合計": "合計",
   "{date}の合計": "%{date}の合計",
-  "最新のお知らせ": "最新のお知らせ",
+  "WhatsNew": {
+    "title": "最新のお知らせ"
+  },
   "SelfDisclosures": {
     "a": [
       "自主公表"
