add notes for selfdisclosure

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -173,7 +173,7 @@
       "自主公表"
     ],
     "notes": [
-      "うわさや風評被害への不安・個人情報の保護・組織としての社会的責任・リスクマネジメントとBCP・あとから発覚することによる評判の低下・事実の迅速な情報開示による顧客や地域への安心の提供、その狭間で、勇気を持って自主的に各ホームページで公表された情報 👏",
+      "自主公表する法的義務が無い中、うわさや風評被害への不安・個人情報の保護・組織としての社会的責任・リスクマネジメントとBCP・金商法上の開示・あとから発覚することによる評判の低下・事実の迅速な情報開示による顧客や地域への安心の提供、その狭間で、勇気を持って自主的に各ホームページ等で公表された情報 👏",
       "判明分のみ"
     ]
   },
