--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -142,7 +142,7 @@
   "{date} 更新": "Last update: {date}",
   "情報をシェアする": "Share",
   "埋め込み用コード": " Embed Code",
-  "埋め込み用コードをコピーしました": " Copied the embeded code",
+  "埋め込み用コードをコピーしました": " Copied the embed code",
   "最終更新": "Last update",
   "注釈": "This is a provisional translation. Please be aware that there may be mistranslations.",
   "print": " Print",
@@ -173,8 +173,8 @@
       "Self Disclosures"
     ],
     "notes": [
-      "自主公表する法的義務が無い中、うわさや風評被害への不安・個人情報の保護・組織としての社会的責任・リスクマネジメントとBCP・金商法上の開示・あとから発覚することによる評判の低下・事実の迅速な情報開示による顧客や地域への安心の提供、その狭間で、勇気を持って自主的に各ホームページ等で公表された情報 👏",
-      "判明分のみ"
+      "There is no legal obligation for voluntary disclosure. Fear of rumors and harmful rumors, protection of personal information, social responsibility as an organization, risk management and BCP, disclosure under the FIEA, loss of reputation due to later discovery, and providing peace of mind to customers and the community through prompt disclosure of facts. Information that was voluntarily disclosed on each website with courage after worrying about whether to disclose it for various reasons 👏",
+      "Identified only"
     ]
   },
   "新型コロナウイルス感染症にかかる相談窓口について": "Detail of The Tokyo COVID-19 Consultation Hotline",
@@ -238,30 +238,30 @@
   "感染したかもしれないと不安に思う方、感染予防法を知りたい方などは、下記、新型コロナウイルス感染症相談窓口にご相談ください。": "If you are worried that you may be infected, or would like to learn about preventative measures, call the Tokyo COVID-19 Call Center.",
   "新型コロナウイルス感染症相談窓口": "Number of calls in The COVID-19 Consultation Hotline",
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
-  "一般相談 受付件数": "Number of calls to the COVID-19 Call Center",
-  "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上",
+  "一般相談 受付件数": "Number of hotline consultations by people with questions or concerns",
+  "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "\"General consultation from people who have questions or concerns about the new coronavirus infection\" is counted.",
   "ふりがな": "Furigana",
   "24時間 全日（土日・祝日を含む）": "24/7 service",
-  "主に「症状がある方からの受診等に関する相談」を計上": "主に「症状がある方からの受診等に関する相談」を計上",
+  "主に「症状がある方からの受診等に関する相談」を計上": "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
   "陽性患者数（市町村別）": "Positive cases by area",
-  "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。",
+  "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "We also accept faxes (019-626-0837) for those who are hard of hearing or who have difficulty talking on the phone.",
   "市町村": "Municipality",
-  "次の症状がある方": "次の症状がある方",
-  "症状のある方": "症状のある方",
+  "次の症状がある方": "If you have any of the following symptoms",
+  "症状のある方": "People who have symptoms of COVID-19",
   "対策サイト非公式": "The Information website (Unofficial)",
-  "窓口を開設した2020年2月8日からのデータを表示": "窓口を開設した2020年2月8日からのデータを表示",
-  "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。",
-  "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
-  "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
-  "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
-  "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
+  "窓口を開設した2020年2月8日からのデータを表示": "Data since the establishment of the consultation service (Feb 8, 2020)",
+  "新型コロナウイルス感染症に対する医療提供に関し、岩手県から役割を設定された医療機関等に勤務し患者と接する医療従事者や職員に対し、慰労金として最大20万円を給付します。": "Up to 200,000 yen will be given as a consolation payment to medical personnel and staff who work at medical institutions that have been assigned by Iwate Prefecture to provide medical care for COVID-19 and have contact with patients.",
+  "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "Information on support measures for new coronavirus infections by Iwate Prefecture and the national government is summarized here.",
+  "窓口を開設した2020年1月21日からのデータを表示": "Data since the establishment of the consultation service (Jan 21, 2020)",
+  "岩手県の発表漏れによりデータの存在しない日がある": "Due to an omission in Iwate Prefecture's announcement, there are days for which no data exist.",
+  "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "Notice of the Iwate Prefectural Consolation Grant Program for Workers Responding to New Coronavirus Infections",
   "抗原検査件数": "Number of antigen tests",
-  "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
+  "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "See details (Iwate COVID-19 related information)",
   "検査実施件数": "Number of Tests",
-  "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
-  "事業者の皆様へのお知らせ": "事業者の皆様へのお知らせ",
-  "コールセンター・各保健所等への受付件数の合計": "コールセンター・各保健所等への受付件数の合計",
+  "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "In order to prevent the spread of the new coronavirus infection, please refer to the information provided by the relevant organizations for each industry.",
+  "事業者の皆様へのお知らせ": "Notice to Businesses",
+  "コールセンター・各保健所等への受付件数の合計": "Total number of cases received at call centers, health centers, etc.",
   "発症日不明者（検査結果が陽性であっても症状がない、発症日を覚えていないなど）はグラフから除いている": "Except people with unknown date of outbreak (test positives without symptoms, who doesn't remember the outbreak date, etc) from the graph",
   "発症日別による陽性者数の推移": "Transition of Positive cases by outbreak date",
   "各保健所から報告があった患者の発生情報を、発症日別に整理したものである": "The outbreak information of patients reported by each health center organized by outbreak date",
@@ -345,15 +345,13 @@
   "岩手県の病床確保計画": "Iwate Prefecture's plan to secure hospital beds",
   "発生初期": "Early stage of outbreak",
   "発生拡大期": "Expanded stage",
-  "岩手県の場合、": "岩手県の場合、",
   "未発生期": "Non-outbreak stage",
   "重点医療機関等の病床の利用が進んだ": "Utilization of beds in priority medical institutions increased.",
   "一部の医療機関の感染症病床が満床": "Infectious disease beds in some medical institutions are full.",
   "全ての医療機関の感染症病床が満床": "Infectious disease beds in all medical institutions are full.",
-  "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している": "（外出自粛要請、営業自粛要請、学校の休校等）をおこない、その20日後に入院患者数のピークが266人となり、計画している病床数 (フェーズ3にて軽中症305床) に収まるという「新たな流行シナリオ」に基づいて医療提供体制等を整備している",
   "すべての医療機関の感染症病床が利用できる": "Infectious disease beds are available in all medical institutions.",
   "感染症病床に余裕がある": "Infectious disease beds are almost available in all medical institutions.",
-  "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請",
+  "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "If the number of positive cases remains at 4.4 persons/day (31 persons/week) (effective reproduction R1.7) for 3 days, a request for self-restraint will be made.",
   "ConfirmedCasesNumberCard": {
     "title": "Number of Positive cases 7-MA",
     "a": [
@@ -365,20 +363,20 @@
     ]
   },
   "岩手のCOVID-19が気になる有志": "Volunteers who are interested in COVID-19 in Iwate",
-  "人です。": "人です。",
+  "人です。": " cases.",
   "{date}": "{date}",
-  "は陽性が": "は陽性が",
-  "件・検査が": "件・検査が",
-  "件・現在の入院患者は": "件・現在の入院患者は",
-  "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
-  "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。",
+  "は陽性が": " positive cases ",
+  "件・検査が": ", test cases ",
+  "件・現在の入院患者は": ", hospitalized ",
+  "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "cases。Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
+  "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
   "県外": "Outside Iwate",
   "けんがい": "けんがい",
-  "地域の医療機関（かかりつけ医）に電話で相談・受診予約をしてください": "地域の医療機関（かかりつけ医）に電話で相談・受診予約をしてください",
-  "受診・相談センター 受付件数": "受診・相談センター 受付件数",
-  "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」",
-  "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
-  "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
+  "地域の医療機関（かかりつけ医）に電話で相談・受診予約をしてください": "Please call your local medical institution (family doctor) to make an appointment for consultation and consultation.",
+  "受診・相談センター 受付件数": "Number of hotline consultations by people with symptoms",
+  "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "If you have no idea about which medical institution to consult, or if you don't have a \"family doctor,\" please contact the Consultation Center.",
+  "または、かかりつけ医の紹介先で受診・検査となります": "Or, you will be referred to a hospital by your family doctor for examination and testing.",
+  "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "If your family doctor is a specific designated medical laboratory, you will be examined there.",
   "通番": "Case Number",
   "事例{tsuban}": "Case {tsuban}",
   "確定日": "Confirmed date",
@@ -398,19 +396,19 @@
       "Outbreak date is the number of relative days to the confirmed date."
     ]
   },
-  "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
+  "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "The new positive cases are classified into those with unlink (unknown contact history) or with link (known contact history) as of the date of publication.",
   "接触歴等不明者数(7日間移動平均)": "Number of Unlinked 7-MA (Positive cases with unknown routes of infection) ",
-  "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない",
-  "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合",
-  "陽性者数/人口": "Number of test positives/Population",
-  "入院と宿泊療養の推移": "Changes in hospitalized and in designated hotels patients",
+  "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "It does not reflect the existence of contact history at the time of publication, which may be revealed by additional investigation after publication.",
+  "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "Number of positive cases/Population is the ratio of the number of positive cases to the population of the municipality (as of Oct 1, 2020).",
+  "陽性者数/人口": "Number of positive cases/Population",
+  "入院と宿泊療養の推移": "Changes in the number of hospitalized patients and hotel care patients",
   "県内": "Inside Iwate",
-  "前日までに報告された陽性者の居住地を元にした累計値": "前日までに報告された陽性者の居住地を元にした累計値",
-  "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある",
-  "意向により居住地が公表されない場合は累計に含まれない": "意向により居住地が公表されない場合は累計に含まれない",
+  "前日までに報告された陽性者の居住地を元にした累計値": "Cumulative value based on the residence of positive cases reported in the previous day.",
+  "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "For example, if their live outside of the iwate prefecture or in another area, but test positive in Morioka City, they may be counted as Morioka City.",
+  "意向により居住地が公表されない場合は累計に含まれない": "If the place of residence is not disclosed due to the patient's wishes, it is not included in the cumulative total.",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "Content on This Site is Licensed Under a {creativeCommons}",
   "前週比": "Week-over-week change",
-  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的",
+  "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "Week-over-week change is a comparison with the number of people with unlink, one week earlier (moving average). Intermittent due to small sample count.",
   "指標": "Indexes",
   "計": "Total",
   "床": " beds",
