update head description for en.json

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -363,13 +363,13 @@
     ]
   },
   "岩手のCOVID-19が気になる有志": "Volunteers who are interested in COVID-19 in Iwate",
-  "人です。": " cases.",
+  "人です。": ".",
   "{date}": "{date}",
-  "は陽性が": " positive cases ",
-  "件・検査が": ", test cases ",
+  "は陽性が": ", positive ",
+  "件・検査が": ", test ",
   "件・現在の入院患者は": ", hospitalized ",
-  "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "cases。Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
-  "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": "Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
+  "人です。陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": ". Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
+  "陽性者の属性、検査の陽性率、病床数、市町村別陽性者数、相談件数などの各種データや過去の推移グラフはこちら。": " Various data and historical graphs, such as attributes of positive patients, positive test rates, number of hospital beds, number of positive patients by municipality, and number of consultations.",
   "県外": "Outside Iwate",
   "けんがい": "けんがい",
   "地域の医療機関（かかりつけ医）に電話で相談・受診予約をしてください": "Please call your local medical institution (family doctor) to make an appointment for consultation and consultation.",
