ConfirmedCasesAttributesCard の en.json

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -12,6 +12,7 @@
     "お知らせ・参考資料": "お知らせ・参考資料",
     "陽性者数": "陽性者数",
     "累計": "累計",
+    "{date}の累計": "{date}の累計",
     "人": "人",
     "%": "%",
     "入院": "入院",
@@ -47,7 +48,6 @@
     ]
   },
   "PCR検査実施件数": "PCR検査実施件数",
-  "{date}の累計": "{date}の累計",
   "件": {
     "tested": "件",
     "reports": "件"
@@ -268,7 +268,6 @@
   "発症日不明者 {num} 人を除く": "発症日不明者 {num} 人を除く",
   "報告日別による陽性者数の推移": "報告日別による陽性者数の推移",
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである",
-  "陽性者の属性": "陽性者の属性",
   "岩手県": "岩手県",
   "盛岡市": "盛岡市",
   "宮古市": "宮古市",
@@ -377,24 +376,27 @@
   "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」": "相談する医療機関に迷う場合や「かかりつけ医」がない場合「受診・相談センター」",
   "または、かかりつけ医の紹介先で受診・検査となります": "または、かかりつけ医の紹介先で受診・検査となります",
   "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）": "かかりつけ医にて受診・検査をおこないます（診療・検査医療機関の場合）",
-  "通番": "通番",
-  "事例{tsuban}": "事例{tsuban}",
-  "確定日": "確定日",
-  "発症日": "発症日",
-  "居住地": "居住地",
-  "年代": "年代",
-  "📺": "📺",
-  "無症状": "無症状",
-  "不明": "不明",
-  "調査中": "調査中",
-  "day": "{d}日前|{d}日前|{d}日前",
-  "10歳未満": "10歳未満",
-  "{age}代": "{age}代",
-  "90歳以上": "90歳以上",
   "ConfirmedCasesAttributesCard": {
+    "title": "陽性者の属性",
     "notes": [
       "発症日は陽性確定日からの相対日数"
-    ]
+    ],
+    "table": {
+      "通番": "通番",
+      "確定日": "確定日",
+      "発症日": "発症日",
+      "居住地": "居住地",
+      "年代": "年代",
+      "📺": "📺",
+      "調査中": "調査中",
+      "10歳未満": "10歳未満",
+      "90歳以上": "90歳以上",
+      "事例{tsuban}": "事例{tsuban}",
+      "無症状": "無症状",
+      "不明": "不明",
+      "daysbefore": "{d}日前|{d}日前|{d}日前",
+      "{age}代": "{age}代"
+    }
   },
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
