直近1週間の新規患者数（対人口10万人）

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -352,7 +352,10 @@
   "感染症病床に余裕がある": "Infectious disease beds are almost available in all medical institutions.",
   "陽性者数が4.4人/日 (31人/週) (実効再生産数 R1.7) の状態が 3日間 続いたら、社会への協力要請": "If the number of positive cases remains at 4.4 persons/day (31 persons/week) (effective reproduction R1.7) for 3 days, a request for self-restraint will be made.",
   "ConfirmedCasesNumberCard": {
-    "title": "Number of Positive cases 7-MA",
+    "title": [
+      "Average Daily Cases in Last 7 Days",
+      "Number of Positive Cases per 100k in Last 7 Days"
+    ],
     "a": [
       "Including examinations at medical institutions"
     ],
