--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -352,7 +352,10 @@
   "すべての医療機関の感染症病床が利用できる": "すべての医療機関の感染症病床が利用できる",
   "感染症病床に余裕がある": "感染症病床に余裕がある",
   "ConfirmedCasesNumberCard": {
-    "title": "新規陽性者数の7日間移動平均",
+    "title": [
+      "新規陽性者数の7日間移動平均",
+      "直近1週間の新規患者数（対人口10万人）"
+    ],
     "a": [
       "医療機関等が行った検査も含む"
     ],
