--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -335,6 +335,7 @@
   "くのへむら": "くのへむら",
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
+  "二戸保健所管内": "Ninohe Area",
   "フェーズ": "Phase ",
   "宿泊療養部屋数": "Recovering rooms at designated hotels",
   "病床等計": "Number of beds for patients",
