個別ページ下部にbreadcrumbを表示してHomeに遷移しやすく

--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -8,6 +8,7 @@
     "岩手の最新感染動向": "岩手の最新感染動向",
     "当サイトについて": "当サイトについて",
     "多言語対応選択メニュー": "多言語対応選択メニュー",
+    "ホーム": "ホーム",
     "モニタリング項目": "モニタリング項目",
     "お知らせ・参考資料": "お知らせ・参考資料",
     "陽性者数": "陽性者数",
