--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -8,6 +8,7 @@
     "岩手の最新感染動向": "COVID-19 in Iwate",
     "当サイトについて": "About this site",
     "多言語対応選択メニュー": "Select language",
+    "ホーム": "Home",
     "モニタリング項目": "Summary of Monitorings",
     "お知らせ・参考資料": "Other Indexes",
     "陽性者数": "Positive cases",
