--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -1,6 +1,4 @@
 {
-  "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ": "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ",
-  "相談の手順を見る": "相談の手順を見る",
   "Common": {
     "岩手県": "岩手県",
     "新型コロナウイルス感染症": "新型コロナウイルス感染症",
@@ -24,6 +22,12 @@
     "検査結果の判明日を基準とする": "検査結果の判明日を基準とする",
     "注": "注釈",
     "データを表示": "データを表示"
+  },
+  "SiteTopUpper": {
+    "最終更新": "最終更新",
+    "注釈": "This is a provisional translation. Please be aware that there may be mistranslations.",
+    "電話相談をどうぞ": "自分や家族の症状に不安や心配があればまずは電話相談をどうぞ",
+    "相談の手順を見る": "相談の手順を見る"
   },
   "ExtLink": {
     "厚生労働省x696": {
@@ -144,8 +148,6 @@
   "情報をシェアする": "情報をシェアする",
   "埋め込み用コード": "埋め込み用コード",
   "埋め込み用コードをコピーしました": "埋め込み用コードをコピーしました",
-  "最終更新": "最終更新",
-  "注釈": "This is a provisional translation. Please be aware that there may be mistranslations.",
   "print": "印刷",
   "SideNavigation": {
     "a": [
