--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -57,6 +57,12 @@
     "tested": "件",
     "reports": "件"
   },
+  "TestedNumberCard": {
+    "title": "検査実施件数",
+    "notes": [
+      "速報値として公開するものであり、後日確定データとして修正される場合がある"
+    ]
+  },
   "About": {
     "a": [
       "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、岩手県内の有志が開設したものです。運営・開発は県内の有志によってボランティアで行われています。",
@@ -213,7 +219,6 @@
   "確定日別による陽性者数の推移": "確定日別による陽性者数の推移",
   "（注）": "（注）",
   "医療機関等が行った検査も含む": "医療機関等が行った検査も含む",
-  "速報値として公開するものであり、後日確定データとして修正される場合がある": "速報値として公開するものであり、後日確定データとして修正される場合がある",
   "接触歴等不明者数（７日間移動平均）": "接触歴等不明者数（７日間移動平均）",
   "PositiveRateCard": {
     "a": [
@@ -261,7 +266,6 @@
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
   "抗原検査件数": "抗原検査件数",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
-  "検査実施件数": "検査実施件数",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
   "事業者の皆様へのお知らせ": "事業者の皆様へのお知らせ",
   "コールセンター・各保健所等への受付件数の合計": "コールセンター・各保健所等への受付件数の合計",
