--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -52,13 +52,16 @@
       "死亡"
     ]
   },
-  "PCR検査実施件数": "PCR検査実施件数",
   "件": {
     "tested": "件",
     "reports": "件"
   },
   "TestedNumberCard": {
     "title": "検査実施件数",
+    "legends": [
+      "PCR検査実施件数",
+      "抗原検査件数"
+    ],
     "notes": [
       "速報値として公開するものであり、後日確定データとして修正される場合がある"
     ]
@@ -264,7 +267,6 @@
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
   "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
-  "抗原検査件数": "抗原検査件数",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
   "事業者の皆様へのお知らせ": "事業者の皆様へのお知らせ",
