--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -212,8 +212,6 @@
   "比較的軽い風邪の症状": "比較的軽い風邪の症状",
   "発熱や咳などの{minorSymptom}がある": "発熱や咳などの{minorSymptom}がある",
   "日別値": "日別値",
-  "1ページ当たり": "1ページ当たり",
-  "{itemsLength} 項目中 {pageStart} - {pageStop} ": "{itemsLength} 項目中 {pageStart} - {pageStop} ",
   "現在判明している人数であり、後日修正される場合がある": "現在判明している人数であり、後日修正される場合がある",
   "{date} の数値": "{date} の数値",
   "接触歴等判明者数": "接触歴等判明者数",
@@ -409,7 +407,11 @@
       "不明": "不明",
       "daysbefore": "{d}日前|{d}日前|{d}日前",
       "{age}代": "{age}代"
-    }
+    },
+    "footer": [
+      "1ページあたり",
+      "{itemsLength} 項目中 {pageStart} - {pageStop} "
+    ]
   },
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである",
   "接触歴等不明者数(7日間移動平均)": "接触歴等不明者数(7日間移動平均)",
