add  県央保健所管内

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -343,6 +343,7 @@
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
   "二戸保健所管内": "Ninohe Area",
+  "県央保健所管内": "Iwate Central Area",
   "フェーズ": "Phase ",
   "宿泊療養部屋数": "Recovering rooms at designated hotels",
   "病床等計": "Number of beds for patients",
