--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -343,6 +343,7 @@
   "ひろのちょう": "ひろのちょう",
   "いちのへまち": "いちのへまち",
   "二戸保健所管内": "二戸保健所管内",
+  "県央保健所管内": "県央保健所管内",
   "フェーズ": "フェーズ",
   "宿泊療養部屋数": "宿泊療養部屋数",
   "病床等計": "病床等計",
