--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -253,7 +253,6 @@
   "24時間 全日（土日・祝日を含む）": "24/7 service",
   "主に「症状がある方からの受診等に関する相談」を計上": "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
-  "陽性患者数（市町村別）": "Positive cases by area",
   "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "We also accept faxes (019-626-0837) for those who are hard of hearing or who have difficulty talking on the phone.",
   "市町村": "Municipality",
   "次の症状がある方": "If you have any of the following symptoms",
@@ -275,6 +274,9 @@
   "発症日不明者 {num} 人を除く": "Except {num} people with unknown date of outbreak",
   "報告日別による陽性者数の推移": "Transition of Positive cases by reported date",
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "The occurrence of infected people reported from health centers are organized by the confirmed date (the date confirmed positive by their doctors)",
+  "ConfirmedCasesByMunicipalitiesCard": {
+    "title": "Positive cases by area",
+  },
   "岩手県": "Iwate Prefecture",
   "盛岡市": "Morioka",
   "宮古市": "Miyako",
