--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -253,7 +253,6 @@
   "24時間 全日（土日・祝日を含む）": "24時間 全日（土日・祝日を含む）",
   "主に「症状がある方からの受診等に関する相談」を計上": "主に「症状がある方からの受診等に関する相談」を計上",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）",
-  "陽性患者数（市町村別）": "陽性患者数（市町村別）",
   "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。",
   "市町村": "市町村",
   "次の症状がある方": "次の症状がある方",
@@ -275,6 +274,9 @@
   "発症日不明者 {num} 人を除く": "発症日不明者 {num} 人を除く",
   "報告日別による陽性者数の推移": "報告日別による陽性者数の推移",
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである",
+  "ConfirmedCasesByMunicipalitiesCard": {
+    "title": "陽性患者数（市町村別）",
+  },
   "岩手県": "岩手県",
   "盛岡市": "盛岡市",
   "宮古市": "宮古市",
