--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -249,12 +249,10 @@
   "9時～21時（土日祝含む）": "9:00 am - 10:00 pm (including weekends and holidays)",
   "一般相談 受付件数": "Number of hotline consultations by people with questions or concerns",
   "「新型コロナウイルス感染症に関する疑問や心配事がある方からの一般相談」を計上": "\"General consultation from people who have questions or concerns about the new coronavirus infection\" is counted.",
-  "ふりがな": "Furigana",
   "24時間 全日（土日・祝日を含む）": "24/7 service",
   "主に「症状がある方からの受診等に関する相談」を計上": "Mainly \"consultations regarding medical examinations from people with symptoms\" is counted.",
   "集団感染発生や曜日による数値のばらつきにより、日々の結果が変動するため、こうしたばらつきを平準化し全体の傾向を見る趣旨から、過去7日間の移動平均値を不明者数として算出（例えば、8月7日の移動平均値は、8月1日から8月7日までの実績値を平均したもの）": "The positive rate here is a 7-day moving average that evens out the day-to-day variation caused by mass infections and other factors, for the purpose of overall trend analysis with line graph (e.g. the positive rate of Aug 7th is calculated by the average during the 1st to 7th of Aug.) ",
   "聴覚に障害のある方をはじめ電話でのご相談が難しい方に向けてファクス (019-626-0837) でも受付をしています。": "We also accept faxes (019-626-0837) for those who are hard of hearing or who have difficulty talking on the phone.",
-  "市町村": "Municipality",
   "次の症状がある方": "If you have any of the following symptoms",
   "症状のある方": "People who have symptoms of COVID-19",
   "対策サイト非公式": "The Information website (Unofficial)",
@@ -276,6 +274,20 @@
   "各保健所から報告があった患者の発生情報を、検査により陽性であることを医師が確認した日別（確定日別）に整理したものである": "The occurrence of infected people reported from health centers are organized by the confirmed date (the date confirmed positive by their doctors)",
   "ConfirmedCasesByMunicipalitiesCard": {
     "title": "Positive cases by area",
+    "legends": [
+      "Municipality",
+      "Furigana",
+      "Positive cases",
+      "Positive / Population",
+      "Past week",
+      "Past week per 10k population"
+    ],
+    "notes": [
+      "Cumulative value based on the residence of positive cases reported in the previous day.",
+      "If the place of residence is not disclosed due to the patient's wishes, it is not included in the cumulative total.",
+      "For example, if their live outside of the iwate prefecture or in another area, but test positive in Morioka City, they may be counted as Morioka City.",
+      "Number of positive cases/Population is the ratio of the number of positive cases to the population of the municipality (as of Oct 1, 2020)."
+    ]
   },
   "岩手県": "Iwate Prefecture",
   "盛岡市": "Morioka",
@@ -419,13 +431,9 @@
   "新規陽性者について、公表日時点の接触歴等の不明者、判明者に区分したものである": "The new positive cases are classified into those with unlink (unknown contact history) or with link (known contact history) as of the date of publication.",
   "接触歴等不明者数(7日間移動平均)": "Number of Unlinked 7-MA (Positive cases with unknown routes of infection) ",
   "公表時点での接触歴の有無であり、公表後の追加調査で判明する場合があるが、それは反映されていない": "It does not reflect the existence of contact history at the time of publication, which may be revealed by additional investigation after publication.",
-  "陽性者数/人口 は市町村の人口(令和2年10月1日現在)に対する陽性者数の割合": "Number of positive cases/Population is the ratio of the number of positive cases to the population of the municipality (as of Oct 1, 2020).",
   "陽性者数/人口": "Number of positive cases/Population",
   "入院と宿泊療養の推移": "Changes in the number of hospitalized patients and hotel care patients",
   "県内": "Inside Iwate",
-  "前日までに報告された陽性者の居住地を元にした累計値": "Cumulative value based on the residence of positive cases reported in the previous day.",
-  "例えば、県外や他地域在住であるが、盛岡市の検査で陽性になった場合、盛岡市として集計される場合がある": "For example, if their live outside of the iwate prefecture or in another area, but test positive in Morioka City, they may be counted as Morioka City.",
-  "意向により居住地が公表されない場合は累計に含まれない": "If the place of residence is not disclosed due to the patient's wishes, it is not included in the cumulative total.",
   "このサイトの内容物は{creativeCommons}の下に提供されています。": "Content on This Site is Licensed Under a {creativeCommons}",
   "前週比": "Week-over-week change",
   "前週比は１週間前の接触歴等不明者数（移動平均値）との比較、サンプル数が少ないので断続的": "Week-over-week change is a comparison with the number of people with unlink, one week earlier (moving average). Intermittent due to small sample count.",
