--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -234,7 +234,8 @@
     ],
     "b": [
       "陽性率：陽性判明数（PCR・抗原）の移動平均／検査件数（＝陽性判明数（PCR・抗原）＋陰性判明数（PCR・抗原））の移動平均",
-      "速報値として公表するものであり、後日確定データとして修正される場合がある"
+      "速報値として公表するものであり、後日確定データとして修正される場合がある",
+      "11月に盛岡市が実施した1713件分の検査件数について計上漏れがあったと県より発表あり。その報告ミスの検査件数が2/27の検査件数として一括計上された。したがって11月の該当日時(不明)と2/27周辺の・検査の陽性率・PCR検査数の7日間移動平均などが、実際には正しく計算することができない。本来は実際に検査を実施した11月の該当日時に遡って検査件数を正しく訂正すべきなのに、その公表が無い。"
     ],
     "c": [
       "岩手県の1日あたりの検査可能件数は864件",
