相談受付件数に更新停止のお知らせを追加

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -262,6 +262,7 @@
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "Information on support measures for new coronavirus infections by Iwate Prefecture and the national government is summarized here.",
   "窓口を開設した2020年1月21日からのデータを表示": "Data since the establishment of the consultation service (Jan 21, 2020)",
   "岩手県の発表漏れによりデータの存在しない日がある": "Due to an omission in Iwate Prefecture's announcement, there are days for which no data exist.",
+  "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている": "This graph has not been updated since February 4, 2021, because Iwate Prefecture has stopped publishing this data.",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "Notice of the Iwate Prefectural Consolation Grant Program for Workers Responding to New Coronavirus Infections",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "See details (Iwate COVID-19 related information) [JA]",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "In order to prevent the spread of the new coronavirus infection, please refer to the information provided by the relevant organizations for each industry.",
