--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -262,6 +262,7 @@
   "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "岩手県及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
   "窓口を開設した2020年1月21日からのデータを表示": "窓口を開設した2020年1月21日からのデータを表示",
   "岩手県の発表漏れによりデータの存在しない日がある": "岩手県の発表漏れによりデータの存在しない日がある",
+  "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている": "2021年2月4日を最後に岩手県がこのデータの公表を止めたため、このグラフの更新が止まっている",
   "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ": "岩手県新型コロナウイルス感染症対応従事者慰労金交付事業のお知らせ",
   "詳細を見る（岩手県新型コロナウイルス感染症関連情報）": "詳細を見る（岩手県新型コロナウイルス感染症関連情報）",
   "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。": "新型コロナウイルス感染拡大防止のため、業種ごとに関係団体の情報を参考としてください。",
